--- a/origin-site/.env
+++ b/origin-site/.env
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_INSTANT_APP_ID=d9b03abd-39be-447c-85c8-f83713eb233f
-NEXT_PUBLIC_SATELLITE_ORIGINS=https://cross-domain-satellite.vercel.app,http://localhost:3015
+NEXT_PUBLIC_SATELLITE_ORIGIN=http://localhost:3015
