--- a/satellite/.env
+++ b/satellite/.env
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_INSTANT_APP_ID=d9b03abd-39be-447c-85c8-f83713eb233f
-NEXT_PUBLIC_ORIGIN_AUTH_GATE_URL=https://cross-domain-origin-site.vercel.app/auth-gate
+NEXT_PUBLIC_ORIGIN_AUTH_GATE_URL=http://localhost:3010/auth-gate
